--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	</script> <noscript>
 	<link href="favicon.ico" rel="shortcut icon">
 	<link href="css/skel.css" rel="stylesheet">
-	<link href="css/style.css" rel="stylesheet">
+	<link href="css/main_style.css" rel="stylesheet">
 	<link href="css/style-wide.css" rel="stylesheet"></noscript><!-- For Safari Browser: -->
 	<link href="apple-touch-icon-192x192-precomposed.png" rel="icon" sizes="192x192"><!-- For third-generation iPad with high-resolution Retina display: -->
 	<link href="apple-touch-icon-144x144-precomposed.png" rel="apple-touch-icon-precomposed" sizes="144x144"><!-- For iPhone with high-resolution Retina display: -->
