--- a/archives.html
+++ b/archives.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <!--
-    Multiverse by HTML5 UP
-    html5up.net | @n33co
-    Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+
+█████╗ ██████╗  ██████╗██╗  ██╗██╗██╗   ██╗███████╗███████╗
+██╔══██╗██╔══██╗██╔════╝██║  ██║██║██║   ██║██╔════╝██╔════╝
+███████║██████╔╝██║     ███████║██║██║   ██║█████╗  ███████╗
+██╔══██║██╔══██╗██║     ██╔══██║██║╚██╗ ██╔╝██╔══╝  ╚════██║
+██║  ██║██║  ██║╚██████╗██║  ██║██║ ╚████╔╝ ███████╗███████║
+╚═╝  ╚═╝╚═╝  ╚═╝ ╚═════╝╚═╝  ╚═╝╚═╝  ╚═══╝  ╚══════╝╚══════╝
+
 -->
+
 <html>
 <head>
     <title>Archives</title>
@@ -172,6 +178,51 @@
 
 						<article class="thumb">
                 <a class="image" href="images/fulls/archF16.jpg"><img alt="" src=
+                "images/thumbs/archT16.jpg"></a>
+            </article>
+
+            <article class="thumb">
+                <a class="image" href="images/fulls/archF17.jpg"><img alt="" src=
+                "images/thumbs/archT16.jpg"></a>
+            </article>
+
+            <article class="thumb">
+                <a class="image" href="images/fulls/archF18.jpg"><img alt="" src=
+                "images/thumbs/archT16.jpg"></a>
+            </article>
+
+            <article class="thumb">
+                <a class="image" href="images/fulls/archF19.jpg"><img alt="" src=
+                "images/thumbs/archT16.jpg"></a>
+            </article>
+
+            <article class="thumb">
+                <a class="image" href="images/fulls/archF20.jpg"><img alt="" src=
+                "images/thumbs/archT16.jpg"></a>
+            </article>
+
+            <article class="thumb">
+                <a class="image" href="images/fulls/archF21.jpg"><img alt="" src=
+                "images/thumbs/archT16.jpg"></a>
+            </article>
+
+            <article class="thumb">
+                <a class="image" href="images/fulls/archF22.jpg"><img alt="" src=
+                "images/thumbs/archT16.jpg"></a>
+            </article>
+
+            <article class="thumb">
+                <a class="image" href="images/fulls/archF23.jpg"><img alt="" src=
+                "images/thumbs/archT16.jpg"></a>
+            </article>
+
+            <article class="thumb">
+                <a class="image" href="images/fulls/archF24.jpg"><img alt="" src=
+                "images/thumbs/archT16.jpg"></a>
+            </article>
+
+            <article class="thumb">
+                <a class="image" href="images/fulls/archF24.jpg"><img alt="" src=
                 "images/thumbs/archT16.jpg"></a>
             </article>
         </div>
