--- a/tim.html
+++ b/tim.html
@@ -24,3 +24,4 @@
       <br>
       <h5><a href="http://webfoundation.org/" target="_blank">Visit World Web Foundation</a></h5>
     </div>
+	</div>
