--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Heebo:300' rel='stylesheet' type='text/css'>
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	<link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
-	<link href="/favicon.ico" rel="icon" type="image/x-icon"><!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+	<link href="/favicon.ico" rel="icon" type="image/x-icon"> <!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 
 	<script src="js/jquery.min.js">
 	</script>
@@ -20,11 +20,15 @@
 	<script src="js/skel-layers.min.js">
 	</script>
 	<script src="js/init.js">
-	</script> <noscript>
+	</script> 
+
+	<noscript>
 	<link href="favicon.ico" rel="shortcut icon">
 	<link href="css/skel.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
-	<link href="css/style-wide.css" rel="stylesheet"></noscript><!-- For Safari Browser: -->
+	<link href="css/style-wide.css" rel="stylesheet">
+  </noscript><!-- For Safari Browser: -->
+
 	<link href="apple-touch-icon-192x192-precomposed.png" rel="icon" sizes="192x192"><!-- For third-generation iPad with high-resolution Retina display: -->
 	<link href="apple-touch-icon-144x144-precomposed.png" rel="apple-touch-icon-precomposed" sizes="144x144"><!-- For iPhone with high-resolution Retina display: -->
 	<link href="apple-touch-icon-114x114-precomposed.png" rel="apple-touch-icon-precomposed" sizes="114x114"><!-- For first- and second-generation iPad: -->
