main_style in root

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 	<script src="js/skel-layers.min.js">
 	</script>
 	<script src="js/init.js">
-	</script> 
+	</script>
 
 	<noscript>
 	<link href="favicon.ico" rel="shortcut icon">
 	<link href="css/skel.css" rel="stylesheet">
-	<link href="css/style.css" rel="stylesheet">
+	<link href="main_style.css" rel="stylesheet">
 	<link href="css/style-wide.css" rel="stylesheet">
   </noscript><!-- For Safari Browser: -->
 
