--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<noscript>
 	<link href="favicon.ico" rel="shortcut icon">
 	<link href="css/skel.css" rel="stylesheet">
-	<link href="main_style.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
 	<link href="css/style-wide.css" rel="stylesheet">
   </noscript><!-- For Safari Browser: -->
 
