--- a/index.html
+++ b/index.html
@@ -379,9 +379,9 @@
 		</section>
 	</div><!-- Footer -->
 	<div id="footer">
-		<div class="copyright" style="margin-left: 2em">
-			<a href="http://html5up.net">HTML5 UP</a> &nbsp; <a href="http://kironroy.github.io/">Kiron Roy</a>
-		</div>
+		<center><div class="copyright">
+			<a href="http://html5up.net">HTML5 UP</a> &nbsp;&nbsp; <a href="http://kironroy.github.io/">Kiron Roy</a>
+		</div></center>
 	</div>
 </body>
 </html>
