--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 	</div><!-- Footer -->
 	<div id="footer">
 		<center><div class="copyright">
-			<a href="http://html5up.net">HTML5 UP</a> &nbsp;&nbsp; <a href="http://kironroy.github.io/">Kiron Roy</a>
+			<a href="http://html5up.net">HTML5 UP</a> &nbsp;&nbsp; <a class="skel-layers-ignoreHref" href="#top" id="top-link"><span class="icon fa-home"> Home</span></a>
 		</div></center>
 	</div>
 </body>
