--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<link href="css/skel.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
 	<link href="css/style-wide.css" rel="stylesheet">
-  </noscript><!-- For Safari Browser: -->
+  </noscript> <!-- For Safari Browser: -->
 
 	<link href="apple-touch-icon-192x192-precomposed.png" rel="icon" sizes="192x192"><!-- For third-generation iPad with high-resolution Retina display: -->
 	<link href="apple-touch-icon-144x144-precomposed.png" rel="apple-touch-icon-precomposed" sizes="144x144"><!-- For iPhone with high-resolution Retina display: -->
@@ -81,7 +81,7 @@
 				</li>
 			</ul>
 		</div>
-	</div><!-- Main -->
+	</div> <!-- Main -->
 	<div id="main">
 		<section class="one dark cover" id="top">
 			<h2>Kiron Roy</h2>
@@ -115,7 +115,7 @@
 							</g>
 						</g>
 					</g></svg>
-				</center><!--**************************************SVG CODE AFTER THIS LOGO ENDS *****************************************-->
+				</center> <!--**************************************SVG CODE AFTER THIS LOGO ENDS *****************************************-->
 				<br>
 				<a class="button scrolly" href="http://kironroy.github.io/resume">Résumé</a>
 			</div>
@@ -154,7 +154,7 @@
 						<article class="item">
 							<a class="image fit" href="http://www.arcgis.com/apps/MapTour/index.html?appid=186a3c01f7fa4d7487b7f2befd0d0b5c"><!--**************************************SVG CODE AFTER THIS NOTE EURO *****************************************-->
 							 <!-- Generator: Adobe Illustrator 14.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 43363)  -->
-							 <!-- Generator: Adobe Illustrator 14.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 43363)  -->
+
 							 <svg height="150px" id="Layer_1" version="1.1" viewbox="0 0 181 150" width="181px" x="0px" xmlns="http://www.w3.org/2000/svg" y="0px">
 							<g>
 								<path d="M128.757,52.844c0.438,1.008-0.103,1.833-1.2,1.833h-74.14c-1.1,0-1.62-0.816-1.155-1.812L64.451,26.7 c0.465-0.997,1.745-1.813,2.845-1.813h47.283c1.101,0,2.358,0.825,2.799,1.833L128.757,52.844z" fill="#222222"></path>
@@ -355,19 +355,19 @@
 					</div>
 				</div>
 			</div>
-		</section><!-- About Me -->
+		</section><!-- Cities -->
 		<section class="three" id="about">
 			<div class="container">
 				<header>
 					<h2>Cities</h2>
 				</header>
-				<p><span style="color: white;"></span></p><!-- **************** MAP BOX MAP STARTS HERE*******************************-->
+				<p><span style="color: white;"></span></p> <!-- **************** MAP BOX MAP STARTS HERE*******************************-->
 				<iframe frameborder='0' height='500px' src='https://a.tiles.mapbox.com/v4/kironroymaps.mlmapmmp/attribution,zoompan,zoomwheel,geocoder,share.html?access_token=pk.eyJ1Ijoia2lyb25yb3ltYXBzIiwiYSI6Ijg1MzYyYjYxOGUyZTZmZjQ2MTBjY2EyNGFiNjU2YTUwIn0.xZ6rI7mUH2xSewoxdm_GkQ' width='100%'></iframe> <!-- ********* FULL SCREEN VIEW LINK BELOW THIS NOTE ****-->
 				<footer>
 					<a class="button scrolly" href="https://a.tiles.mapbox.com/v4/kironroymaps.mlmapmmp/page.html?access_token=pk.eyJ1Ijoia2lyb25yb3ltYXBzIiwiYSI6Ijg1MzYyYjYxOGUyZTZmZjQ2MTBjY2EyNGFiNjU2YTUwIn0.xZ6rI7mUH2xSewoxdm_GkQ#6/36.800/-121.520"><span style="color:black">Full Screen Map</span></a>
 				</footer>
 			</div>
-		</section><!-- **************** MAP BOX MAP ENDS HERE*******************************-->
+		</section> <!-- **************** MAP BOX MAP ENDS HERE*******************************-->
 		<div class="bottom"></div><!-- Contact -->
 		<section class="four" id="contact">
 			<div class="container">
@@ -377,7 +377,7 @@
 				</header>
 			</div>
 		</section>
-	</div><!-- Footer -->
+	</div> <!-- Footer -->
 	<div id="footer">
 		<center><div class="copyright">
 			<a href="http://html5up.net">Html5 UP</a> &nbsp;&nbsp; <a class="skel-layers-ignoreHref" href="#top" id="top-link"> Home <span class="icon fa-home"></span></a>
