kiron link in footer again

--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 	</div> <!-- Footer -->
 	<div id="footer">
 		<center><div class="copyright">
-			<a href="http://html5up.net">Html5 UP</a> &nbsp;&nbsp; <a class="skel-layers-ignoreHref" href="#" id="top-link"> Home <span class="icon fa-home"></span></a>
+			<a href="http://html5up.net">Html5 UP</a> &nbsp;&nbsp; <a href="https://kironroy.github.io">Kiron Roy</a>
 		</div></center>
 	</div>
 </body>
