--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 	<link href='https://fonts.googleapis.com/css?family=Heebo:300' rel='stylesheet' type='text/css'>
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	<link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
-	<link href="/favicon.ico" rel="icon" type="image/x-icon"> <!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-
-	<script src="js/jquery.min.js">
+	<link href="/favicon.ico" rel="icon" type="image/x-icon"><!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+  <script src="js/jquery.min.js">
 	</script>
 	<script src="js/jquery.scrolly.min.js">
 	</script>
@@ -20,15 +19,11 @@
 	<script src="js/skel-layers.min.js">
 	</script>
 	<script src="js/init.js">
-	</script>
-
-	<noscript>
+	</script> <noscript>
 	<link href="favicon.ico" rel="shortcut icon">
 	<link href="css/skel.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
-	<link href="css/style-wide.css" rel="stylesheet">
-  </noscript> <!-- For Safari Browser: -->
-
+	<link href="css/style-wide.css" rel="stylesheet"></noscript><!-- For Safari Browser: -->
 	<link href="apple-touch-icon-192x192-precomposed.png" rel="icon" sizes="192x192"><!-- For third-generation iPad with high-resolution Retina display: -->
 	<link href="apple-touch-icon-144x144-precomposed.png" rel="apple-touch-icon-precomposed" sizes="144x144"><!-- For iPhone with high-resolution Retina display: -->
 	<link href="apple-touch-icon-114x114-precomposed.png" rel="apple-touch-icon-precomposed" sizes="114x114"><!-- For first- and second-generation iPad: -->
@@ -81,7 +76,7 @@
 				</li>
 			</ul>
 		</div>
-	</div> <!-- Main -->
+	</div><!-- Main -->
 	<div id="main">
 		<section class="one dark cover" id="top">
 			<h2>Kiron Roy</h2>
@@ -115,7 +110,7 @@
 							</g>
 						</g>
 					</g></svg>
-				</center> <!--**************************************SVG CODE AFTER THIS LOGO ENDS *****************************************-->
+				</center><!--**************************************SVG CODE AFTER THIS LOGO ENDS *****************************************-->
 				<br>
 				<a class="button scrolly" href="http://kironroy.github.io/resume">Résumé</a>
 			</div>
@@ -129,35 +124,24 @@
 					<div class="4u">
 						<article class="item">
 							<a class="image fit" href="https://www.arcgis.com/apps/MapTour/index.html?appid=10b9ea571f8e41c6a8e3881738021075"><!--**************************************SVG CODE AFTER THIS NOTE SOCAL*****************************************-->
-								<?xml version="1.0" encoding="utf-8"?>
-		<!-- Generator: Adobe Illustrator 14.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 43363)  -->
-		<!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
-		<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-			 width="181px" height="150px" viewBox="0 0 181 150" enable-background="new 0 0 181 150" xml:space="preserve">
-		<g>
-			<path fill="#F4F0ED" d="M128.757,52.844c0.438,1.008-0.103,1.833-1.2,1.833h-74.14c-1.1,0-1.62-0.816-1.155-1.812L64.451,26.7
-				c0.465-0.997,1.745-1.813,2.845-1.813h47.283c1.101,0,2.358,0.825,2.799,1.833L128.757,52.844z"/>
-		</g>
-		<g>
-			<path fill="#F4F0ED" d="M6.66,43.691c0-2.15,1.821-3.909,4.046-3.909h159.588c2.226,0,4.046,1.759,4.046,3.909v79.566
-				c0,2.149-1.82,3.909-4.046,3.909H10.706c-2.225,0-4.046-1.76-4.046-3.909V43.691z"/>
-		</g>
-		<circle fill="#222222" cx="90.5" cy="84.02" r="39.535"/>
-		<rect x="6.66" y="52.833" fill="#222222" width="167.68" height="59.062"/>
-		<g>
-			<g>
-				<circle fill="#DE3129" cx="90.5" cy="84.02" r="36.406"/>
-				<circle fill="#FFFFFF" cx="90.5" cy="84.057" r="33.797"/>
-				<path fill="#DE3129" stroke="#FFFFFF" d="M75.26,61.526c0.037,0,0.074,0,0.113,0c0.425,1.413,0.842,2.838,1.281,4.237
-					c1.411,0,2.823,0,4.236,0c0,0.038,0,0.074,0,0.11c-1.178,0.831-2.308,1.708-3.402,2.622c0.388,1.415,0.877,2.728,1.227,4.181
-					c-0.037,0-0.076,0-0.111,0c-1.042-0.874-2.155-1.676-3.234-2.51c-1.188,0.766-2.244,1.659-3.347,2.51c-0.036,0-0.074,0-0.112,0
-					c0.396-1.429,0.838-2.806,1.284-4.181c-1.127-0.921-2.306-1.785-3.457-2.676c0-0.02,0-0.038,0-0.058c1.412,0,2.825,0,4.235,0
-					C74.428,64.375,74.878,62.987,75.26,61.526z"/>
-				<path fill="#DE3129" d="M123.742,92.489c0,15.13-15.064,27.396-33.645,27.396c-18.582,0-33.646-12.267-33.646-27.396"/>
-			</g>
-		</g>
-		</svg>
-</a> <!--*************************************SVG CODE  ENDED  CAL HERE *******************************************-->
+							 <!-- Generator: Adobe Illustrator 14.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 43363)  -->
+							 <svg height="150px" id="Layer_1" version="1.1" viewbox="0 0 181 150" width="181px" x="0px" xmlns="http://www.w3.org/2000/svg" y="0px">
+							<g>
+								<path d="M128.757,52.844c0.438,1.008-0.103,1.833-1.2,1.833h-74.14c-1.1,0-1.62-0.816-1.155-1.812L64.451,26.7 c0.465-0.997,1.745-1.813,2.845-1.813h47.283c1.101,0,2.358,0.825,2.799,1.833L128.757,52.844z" fill="#F4F0ED"></path>
+							</g>
+							<g>
+								<path d="M6.66,43.691c0-2.15,1.821-3.909,4.046-3.909h159.588c2.226,0,4.046,1.759,4.046,3.909v79.566 c0,2.149-1.82,3.909-4.046,3.909H10.706c-2.225,0-4.046-1.76-4.046-3.909V43.691z" fill="#F4F0ED"></path>
+							</g>
+							<circle cx="90.5" cy="84.02" fill="#222222" r="39.535"></circle>
+							<rect fill="#222222" height="59.062" width="167.68" x="6.66" y="52.833"></rect>
+							<g>
+								<g>
+									<circle cx="90.5" cy="84.02" fill="#DE3129" r="36.406"></circle>
+									<circle cx="90.5" cy="84.057" fill="#FFFFFF" r="33.797"></circle>
+									<path d="M75.26,61.526c0.037,0,0.074,0,0.113,0c0.425,1.413,0.842,2.838,1.281,4.237 c1.411,0,2.823,0,4.236,0c0,0.038,0,0.074,0,0.11c-1.178,0.831-2.308,1.708-3.402,2.622c0.388,1.415,0.877,2.728,1.227,4.181 c-0.037,0-0.076,0-0.111,0c-1.042-0.874-2.155-1.676-3.234-2.51c-1.188,0.766-2.244,1.659-3.347,2.51c-0.036,0-0.074,0-0.112,0 c0.396-1.429,0.838-2.806,1.284-4.181c-1.127-0.921-2.306-1.785-3.457-2.676c0-0.02,0-0.038,0-0.058c1.412,0,2.825,0,4.235,0 C74.428,64.375,74.878,62.987,75.26,61.526z" fill="#DE3129" stroke="#FFFFFF"></path>
+									<path d="M123.742,92.489c0,15.13-15.064,27.396-33.645,27.396c-18.582,0-33.646-12.267-33.646-27.396" fill="#DE3129"></path>
+								</g>
+							</g></svg></a> <!--*************************************SVG CODE  ENDED  CAL HERE *******************************************-->
 							<header>
 								<h3>California Tour</h3>
 							</header>
@@ -165,7 +149,6 @@
 						<article class="item">
 							<a class="image fit" href="http://www.arcgis.com/apps/MapTour/index.html?appid=186a3c01f7fa4d7487b7f2befd0d0b5c"><!--**************************************SVG CODE AFTER THIS NOTE EURO *****************************************-->
 							 <!-- Generator: Adobe Illustrator 14.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 43363)  -->
-
 							 <svg height="150px" id="Layer_1" version="1.1" viewbox="0 0 181 150" width="181px" x="0px" xmlns="http://www.w3.org/2000/svg" y="0px">
 							<g>
 								<path d="M128.757,52.844c0.438,1.008-0.103,1.833-1.2,1.833h-74.14c-1.1,0-1.62-0.816-1.155-1.812L64.451,26.7 c0.465-0.997,1.745-1.813,2.845-1.813h47.283c1.101,0,2.358,0.825,2.799,1.833L128.757,52.844z" fill="#222222"></path>
@@ -372,13 +355,13 @@
 				<header>
 					<h2>Cities</h2>
 				</header>
-				<p><span style="color: white;"></span></p> <!-- **************** MAP BOX MAP STARTS HERE*******************************-->
+				<p><span style="color: white;"></span></p><!-- **************** MAP BOX MAP STARTS HERE*******************************-->
 				<iframe frameborder='0' height='500px' src='https://a.tiles.mapbox.com/v4/kironroymaps.mlmapmmp/attribution,zoompan,zoomwheel,geocoder,share.html?access_token=pk.eyJ1Ijoia2lyb25yb3ltYXBzIiwiYSI6Ijg1MzYyYjYxOGUyZTZmZjQ2MTBjY2EyNGFiNjU2YTUwIn0.xZ6rI7mUH2xSewoxdm_GkQ' width='100%'></iframe> <!-- ********* FULL SCREEN VIEW LINK BELOW THIS NOTE ****-->
 				<footer>
 					<a class="button scrolly" href="https://a.tiles.mapbox.com/v4/kironroymaps.mlmapmmp/page.html?access_token=pk.eyJ1Ijoia2lyb25yb3ltYXBzIiwiYSI6Ijg1MzYyYjYxOGUyZTZmZjQ2MTBjY2EyNGFiNjU2YTUwIn0.xZ6rI7mUH2xSewoxdm_GkQ#6/36.800/-121.520"><span style="color:black">Full Screen Map</span></a>
 				</footer>
 			</div>
-		</section> <!-- **************** MAP BOX MAP ENDS HERE*******************************-->
+		</section><!-- **************** MAP BOX MAP ENDS HERE*******************************-->
 		<div class="bottom"></div><!-- Contact -->
 		<section class="four" id="contact">
 			<div class="container">
@@ -388,11 +371,13 @@
 				</header>
 			</div>
 		</section>
-	</div> <!-- Footer -->
+	</div><!-- Footer -->
 	<div id="footer">
-		<center><div class="copyright">
-			<a href="http://html5up.net">Html5 UP</a> &nbsp;&nbsp; <a href="https://kironroy.github.io">Kiron Roy</a>
-		</div></center>
+		<center>
+			<div class="copyright">
+				<a href="http://html5up.net">Html5 UP</a> &nbsp;&nbsp; <a href="https://kironroy.github.io">Kiron Roy</a>
+			</div>
+		</center>
 	</div>
 </body>
 </html>
