--- a/index.html
+++ b/index.html
@@ -349,7 +349,8 @@
 					</div>
 				</div>
 			</div>
-		</section><!-- Cities -->
+		</section>
+		<!-- Cities -->
 		<section class="three" id="about">
 			<div class="container">
 				<header>
@@ -362,7 +363,8 @@
 				</footer>
 			</div>
 		</section><!-- **************** MAP BOX MAP ENDS HERE*******************************-->
-		<div class="bottom"></div><!-- Contact -->
+		<div class="bottom"></div>
+		<!-- Contact -->
 		<section class="four" id="contact">
 			<div class="container">
 				<header>
@@ -371,7 +373,8 @@
 				</header>
 			</div>
 		</section>
-	</div><!-- Footer -->
+	</div>
+	<!-- Footer -->
 	<div id="footer">
 		<center>
 			<div class="copyright">
