--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<a class="skel-layers-ignoreHref" href="#about" id="about-link"><span class="icon fa-map-marker">Cities</span></a>
 					</li>
 					<li>
-						<a class="skel-layers-ignoreHref" href="#contact" id="contact-link"><span class="icon fa-envelope">Contact</span></a>
+						<a class="skel-layers-ignoreHref" href="#contact" id="contact-link"><span class="icon fa-paper-plane">Contact</span></a>
 					</li>
 				</ul>
 			</nav>
