--- a/acura.html
+++ b/acura.html
@@ -6,33 +6,34 @@
 	<meta content="width=device-width, initial-scale=1" name="viewport">
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
-	</script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
-	</script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<style>
   @import url('https://fonts.googleapis.com/css?family=Pontano+Sans');
 
   body {
     font-family: 'Pontano Sans', sans-serif;
-    background-color: #FEFEFE;
+    background-color: #e6eaee;
+	}
 
-  }
+
+
+
 	</style>
 </head>
 <body>
-  <center><a href="http://wikicars.org/en/Acura_RSX"><img alt="Kiron Roy Logo" src="acura.svg" style="width:90px;height:90px;"></a></center>
+  <center><a href="http://wikicars.org/en/Acura_RSX"><img alt="Kiron Roy Logo" src="acura2.svg" style="width:90px;height:90px;"></a></center>
 
-  <table class="table table-striped">
+  <table class="table table-striped table-responsive">
 		<thead>
 			<tr>
-				<th>#</th>
+				<th></th>
 				<th>Service Type</th>
 				<th>Description</th>
-				<th>Cost $</th>
+				<th>$ Cost</th>
         <th>Date</th>
         <th>Mileage</th>
-        <th>Invoice #</th>
+        <th># Invoice</th>
 			</tr>
 		</thead>
 		<tbody>
