--- a/acura.html
+++ b/acura.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Kiron Roy Bootstrap</title>
+	<title>Acura Maintenance Log</title>
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1" name="viewport">
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -12,7 +12,7 @@
   @import url('https://fonts.googleapis.com/css?family=Pontano+Sans');
 
   body {
-    font-family: 'Pontano Sans', sans-serif;
+    font-family: 'Pontano Sans', sans-serif;src:
     background-color: #e6eaee;
 	}
 
