--- a/acura.html
+++ b/acura.html
@@ -40,7 +40,7 @@
 			<tr>
 				<th scope="row">1</th>
 				<td>Struts</td>
-				<td>Four struts: Monroe Gas Struts</td>
+				<td>Four struts: <i>Monroe Gas Struts</i></td>
 				<td>$1,251.64</td>
         <td>9-11-2017</td>
         <td>95,422</td>
@@ -49,7 +49,7 @@
 			<tr>
 				<th scope="row">2</th>
         <td>Tires</td>
-				<td>Four Tires Replaced: Goodyear Assurance</td>
+				<td>Four Tires Replaced: <i>Goodyear Assurance</i></td>
 				<td>$504.88</td>
         <td>9-6-2017</td>
         <td>95,346</td>
