{index,resume}.html

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 					<a class="icon fa fa-github-alt" href="https://github.com/kironroy/kironroy.github.io/wiki"><span class="label">Git Help</span></a>
 				</li>
 				<li>
-					<a class="icon fa fa-free-code-camp" href="https://www.freecodecamp.com/kironroy"><span class="label">freeCodeCamp</span></a>
+					<a class="icon fa fa-diamond" href="https://glitch.com/@kironroy"><span class="label">freeCodeCamp</span></a>
 				</li>
 				<li style="list-style: none; display: inline">
 					<a class="icon fa-codepen" href="http://codepen.io/kironroy/#"><span class="label">Codepen</span></a>
