--- a/resume.html
+++ b/resume.html
@@ -5,8 +5,7 @@
 	<meta content="width=device-width, initial-scale=1" name="viewport">
 	<title>Kiron Roy: Resume</title>
 	<link href="resumestyle.css" rel="stylesheet" type="text/css">
-	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-	<link href="apple-touch-icon-192x192-precomposed.png" rel="icon" sizes="192x192"><!-- For third-generation iPad with high-resolution Retina display: -->
+  <link href="apple-touch-icon-192x192-precomposed.png" rel="icon" sizes="192x192"><!-- For third-generation iPad with high-resolution Retina display: -->
 	<link href="apple-touch-icon-144x144-precomposed.png" rel="apple-touch-icon-precomposed" sizes="144x144"><!-- For iPhone with high-resolution Retina display: -->
 	<link href="apple-touch-icon-114x114-precomposed.png" rel="apple-touch-icon-precomposed" sizes="114x114"><!-- For first- and second-generation iPad: -->
 	<link href="apple-touch-icon-72x72-precomposed.png" rel="apple-touch-icon-precomposed" sizes="72x72"><!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
@@ -26,11 +25,11 @@
 			</div>
 			<div class="quickFade delayFour" id="contactDetails">
 				<ul>
-					<li><i class="fa fa-envelope" aria-hidden="true"></i>&nbsp; <a href="mailto:kironroynet@gmail.com?Subject=Regarding%20your%20portfolio:" target="_blank">kironroynet@gmail.com</a>
+					<li>gmail: &nbsp; <a href="mailto:kironroynet@gmail.com?Subject=Regarding%20your%20portfolio:" target="_blank">kironroynet@gmail.com</a>
 					</li>
-					<li><i class="fa fa-github" aria-hidden="true"></i> &nbsp; <a href="https://github.com/kironroy">repositories</a>
+					<li>github: &nbsp; <a href="https://github.com/kironroy">repositories</a>
 					</li>
-					<li><i class="fa fa-github-alt" aria-hidden="true"></i> &nbsp; <a href="https://github.com/kironroy/kironroy.github.io/wiki">wikis</a>
+					<li>github wikis: &nbsp; <a href="https://github.com/kironroy/kironroy.github.io/wiki">wikis</a>
 					</li>
 				</ul>
 			</div>
