--- a/resume.html
+++ b/resume.html
@@ -25,11 +25,11 @@
 			</div>
 			<div class="quickFade delayFour" id="contactDetails">
 				<ul>
-					<li>gmail: &nbsp; <a href="mailto:kironroynet@gmail.com?Subject=Regarding%20your%20portfolio:" target="_blank">kironroynet@gmail.com</a>
+					<li>gmail: <a href="mailto:kironroynet@gmail.com?Subject=Regarding%20your%20portfolio:" target="_blank">kironroynet@gmail.com</a>
 					</li>
-					<li>github: &nbsp; <a href="https://github.com/kironroy">repositories</a>
+					<li>github: <a href="https://github.com/kironroy">repositories</a>
 					</li>
-					<li>github wikis: &nbsp; <a href="https://github.com/kironroy/kironroy.github.io/wiki">wikis</a>
+					<li>github wikis: <a href="https://github.com/kironroy/kironroy.github.io/wiki">wikis</a>
 					</li>
 				</ul>
 			</div>
