--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
 	<meta content="text/html; charset=utf-8" http-equiv="content-type">
 	<title>Kiron Roy</title>
-	<link href='https://fonts.googleapis.com/css?family=Heebo:300' rel='stylesheet' type='text/css'>
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	<link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
 	<link href="/favicon.ico" rel="icon" type="image/x-icon"><!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
@@ -60,10 +59,10 @@
 		<div class="bottom">
 			<ul class="icons">
 				<li>
-					<a class="icon fa-github" href="https://github.com/kironroy"><span class="label">Github</span></a>
+					<a class="icon fa fa-github" href="https://github.com/kironroy/kironroy.github.io/wiki"><span class="label">Git Help</span></a>
 				</li>
 				<li>
-					<a class="icon fa fa-github-alt" href="https://github.com/kironroy/kironroy.github.io/wiki"><span class="label">Git Help</span></a>
+					<a class="icon fa fa-jsfiddle" href=""><span class="label">Js Fiddle</span></a>
 				</li>
 				<li>
 					<a class="icon fa fa-diamond" href="https://glitch.com/@kironroy"><span class="label">freeCodeCamp</span></a>
