affinity photo resume alter

--- a/resume.html
+++ b/resume.html
@@ -86,11 +86,11 @@
 					<ul class="keySkills">
 						<li>Adobe Photoshop</li>
 						<li>Adobe Illustrator</li>
-						<li>Adobe InDesign</li>
+						<!--<li>Affinity Photo</li>-->
 						<li>Excel/OpenOffice</li>
 						<li>Git</li>
-						<li>HTML/CSS</li>
-						<li>JavaScript/jQuery</li>
+						<li>HTML/CSS/Js</li>
+						<li>JavaScript</li>
 						<li>MAMP</li>
 						<li>MySQL</li>
 						<li>CMS/CRUD</li>
