resume and index changes

--- a/resume.html
+++ b/resume.html
@@ -84,8 +84,8 @@
 				</div>
 				<div class="sectionContent">
 					<ul class="keySkills">
-						<li>Adobe Photoshop</li>
-						<li>Adobe Illustrator</li>
+						<li>Adobe Photoshop/Illustrator</li>
+						<li>Bootstap toolkit</li>
 						<!--<li>Affinity Photo</li>-->
 						<li>Excel/OpenOffice</li>
 						<li>Git</li>
@@ -99,7 +99,6 @@
 						<li>Ruby</li>
 						<li>Sketch: macOS</li>
 						<li>Terminal: macOS</li>
-						<li>Windows PowerShell</li>
 						<li>QGIS</li>
 						<li>Web Maps</li>
 					</ul>
