--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 						<a class="icon fa fa-github" href="https://github.com/kironroy/kironroy.github.io/wiki"><span class="label">Git Help</span></a>
 					</li>
 					<li>
-						<a class="icon fa fa-jsfiddle" href=""><span class="label">Js Fiddle</span></a>
+						<a class="icon fa fa-jsfiddle" href="https://jsfiddle.net/user/kironroy/fiddles/"><span class="label">Js Fiddle</span></a>
 					</li>
 					<li>
-						<a class="icon fa fa-diamond" href="https://glitch.com/@kironroy"><span class="label">freeCodeCamp</span></a>
+						<a class="icon fa fa-diamond" href="https://glitch.com/@kironroy"><span class="label">Glitch</span></a>
 					</li>
 					<li style="list-style: none; display: inline">
 						<a class="icon fa-codepen" href="http://codepen.io/kironroy/#"><span class="label">Codepen</span></a>
