resume and index changes

--- a/resume.html
+++ b/resume.html
@@ -84,22 +84,22 @@
 				</div>
 				<div class="sectionContent">
 					<ul class="keySkills">
-						<li>Adobe Photoshop/Illustrator</li>
-						<li>Bootstap toolkit</li>
+						<li>Adobe Photoshop</li>
+						<li>Adobe Illustrator</li>
+						<li>Bootstrap</li>
 						<!--<li>Affinity Photo</li>-->
 						<li>Excel/OpenOffice</li>
 						<li>Git</li>
-						<li>HTML/CSS/Js</li>
+						<li>HTML/CSS</li>
 						<li>JavaScript</li>
 						<li>MAMP</li>
 						<li>MySQL</li>
 						<li>CMS/CRUD</li>
             <li>PHP</li>
-						<li>Product Photography</li>
 						<li>Ruby</li>
 						<li>Sketch: macOS</li>
 						<li>Terminal: macOS</li>
-						<li>QGIS</li>
+
 						<li>Web Maps</li>
 					</ul>
 				</div>
