--- a/index2.html
+++ b/index2.html
@@ -40,9 +40,8 @@
 			<!-- Logo -->
 			<div id="logo">
 				<!--<center><span class="image avatar48"><img src="logo2.svg" style="width:50px;height:50px;"></span></center>-->
-				<h1 id="title">Kiron Roy</h1><br>
+				<h1 id="title">Kiron Roy</h1>
 
-				<br>
 			</div><!-- Nav -->
 			<nav id="nav">
 				<ul>
@@ -85,7 +84,7 @@
 		<section class="one dark cover" id="top">
 			<h2>Kiron Roy</h2>
 			<div class="container">
-				<header><div id='quote'>s</div></header>
+
 				<br>
 				<!--**************************************SVG CODE AFTER THIS KIRON LOGO *****************************************-->
 				<center>
@@ -116,6 +115,8 @@
 						</g>
 					</g></svg>
 				</center><!--**************************************SVG CODE AFTER THIS LOGO ENDS *****************************************-->
+				<br>
+				<header><div id='quote'><!-- quotes --></div></header>
 				<br>
 				<a class="button scrolly" href="http://kironroy.github.io/resume">Résumé</a>
 			</div>
@@ -383,8 +384,9 @@
 			<script>
 			var div = document.getElementById('quote');
 			var quotes = [
-			'Web Development',
-			'Photography'
+			'Photography',
+			'Wep Mapping',
+			'Front End Web Development'
 			];
 			var pos = 1;
 				setInterval(function(){
