--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
 					var div = document.getElementById('quote');
 					var quotes = [
 					'Photography',
-					'Wep Mapping',
+					'Web Mapping',
 					'Front End Web Development'
 					];
 					var pos = 1;
