pacing for resume button fixed

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<!-- Logo -->
 				<div id="logo">
 					<!--<center><span class="image avatar48"><img src="logo2.svg" style="width:50px;height:50px;"></span></center>-->
-					<h1 id="title">Kiron Roy</h1>
+					<h1 id="title">Kiron Roy</h1><br>
 				</div><!-- Nav -->
 				<nav id="nav">
 					<ul>
@@ -105,7 +105,6 @@
 						</g></svg>
 					</center><!--**************************************SVG CODE AFTER THIS LOGO ENDS *****************************************-->
 					<br>
-          <br>
 					<a class="button scrolly" href="http://kironroy.github.io/resume">Résumé</a>
 				</div>
 			</section><!-- Portfolio -->
@@ -379,7 +378,7 @@
 			<center>
 				<div class="copyright">
 					<a href="http://html5up.net">Html5 UP</a> &nbsp;&nbsp; <a href="https://kironroy.github.io">Kiron Roy</a>
-        </div>
+				</div>
 			</center>
 		</div>
 	</body>
